# chromaroute

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: advanced.md
src/chromaroute/: __init__.py  config.py  embedding.py  vector_store.py
tests/: test_config.py  test_embedding.py  test_provider.py
