[project]
name = "chromaroute"
version = "0.2.1"
description = "Provider-agnostic embedding functions for ChromaDB with OpenRouter and local fallback support."
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = { text = "MIT" }
authors = [{ name = "Sean Brar", email = "hello@seanbrar.com" }]
keywords = [
    "embeddings",
    "chromadb",
    "openrouter",
    "rag",
    "vector-database",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "chromadb>=1.4.1",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
local = ["sentence-transformers>=5.2.0"]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "mypy>=1.19.1",
    "types-requests>=2.32.4.20260107",
]

[project.urls]
Homepage = "https://github.com/seanbrar/chromaroute"
Repository = "https://github.com/seanbrar/chromaroute"
Changelog = "https://github.com/seanbrar/chromaroute/blob/main/CHANGELOG.md"
Issues = "https://github.com/seanbrar/chromaroute/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chromaroute"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TCH", "ARG", "PTH"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
